# s32k-quickstart

./: Cargo.toml  LICENSE  README.md  memory.x
src/: main.rs
